crates/ink/tests/ui/selector_bytes/fail/non_literal_parameter.stderr
error: expected string or byte string literal as second argument
 --> tests/ui/selector_bytes/fail/non_literal_parameter.rs:2:47
  |
2 | const _: u32 = ink::selector_bytes!(Abi::Ink, INPUT);
  |                                               ^^^^^
